@@ -30,6 +30,7 @@ Produced by Jim Shore and Levi Khatskevitch.
 * Better handling of infinite redirection loops.  Credit to Levi Khatskevitch.
 * Fixed exception when clicking buttons inside UserControl.  Credit to Levi Khatskevitch.
 * CheckBoxTester.Checked can now be set to false.  Credit to Simon Jackson.
+* Added Text property to CheckBoxTester.  Credit to Levi Khatskevitch.
 
 (Note: Jim Shore was named Jim Little before the release of version 1.4.)
 
